--- a/src/main/webapp/resources/styles.css
+++ b/src/main/webapp/resources/styles.css
@@ -1,1 +1,77 @@
 @charset "UTF-8";
+
+body {
+	background: rgb(2, 1, 2);
+	background: linear-gradient(180deg, rgba(2, 1, 2, 1) 0%,
+		rgba(36, 27, 53, 1) 52%, rgba(203, 128, 255, 1) 100%);
+	height: 100%;
+	margin: 0;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	color: #FEFAF1;
+	position: relative;
+	left: 10px !important;
+}
+
+#pbox {
+	height: auto;
+	width: auto;
+	background: #C7D8C6;
+	border-radius: 10px;
+}
+
+html {
+	height: 100%;
+}
+
+h3 {
+	color: #FEFAF1;
+}
+
+.form-text {
+	color: #FEFAF1;
+	position: relative;
+	left: 4px;
+}
+
+#nfInfo {
+	width: 185px;
+	height: 20px;
+	background: #667985;
+	border-radius: 8px;
+	align-self: center;
+}
+
+#nfInfo2 {
+	width: 230px;
+	height: 20px;
+	background: #667985;
+	border-radius: 8px;
+	align-self: center;
+}
+
+#nfInfo3 {
+	width: 380px;
+	height: 42px;
+	background: #667985;
+	border-radius: 8px;
+	align-self: center;
+}
+
+#homeButton {
+	position: absolute;
+	top: 7px;
+}
+
+h4 {
+	position: relative;
+	left: 6px;
+	color: #ff6735;
+}
+#titleBlock{
+	width: 350px;
+	height: auto;
+	background: #171717;
+	border-radius: 10px;
+	
+}
